--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3567,7 +3567,7 @@ body {
 }
 
 .cookieConsent .cookie-consent .cookie-des .cookie-options .cookie-consent-statement .toggle-indicator {
-  padding: 15px 10px 15px 20px;
+  padding: 18px 10px 18px 20px;
   border-bottom: 2px solid #202c5a;
   display: flex;
   justify-content: space-between;
@@ -3594,6 +3594,8 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   background: linear-gradient(to bottom, #7d3ef5 0%, #7126fe 100%);
+  cursor: pointer;
+  font-family: "Gotham Bold";
 }
 
 .cookieConsent .cookie-consent .cookie-des .cookie-options .cookie-consent-statement .mobile-state-des {
