--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3006,7 +3006,7 @@ body {
         }
         .cookie-consent-statement {
           .toggle-indicator {
-            padding: 15px 10px 15px 20px;
+            padding: 18px 10px 18px 20px;
             border-bottom: 2px solid #202c5a;
             display: flex;
             justify-content: space-between;
@@ -3027,6 +3027,8 @@ body {
                 text-transform: uppercase;
                 text-decoration: none;
                 background: linear-gradient(to bottom, #7d3ef5 0%, #7126fe 100%);
+                cursor: pointer;
+                font-family: "Gotham Bold";
               }
             }
           }
