deactivate the language function

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -845,7 +845,7 @@ body {
 
 .page .main .service-item .description p {
   white-space: pre-wrap;
-  color: #9da6c7;
+  color: #fff;
 }
 
 .page .main .plan-item {
