--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -719,7 +719,7 @@ body {
         text-align: left;
         p {
           white-space: pre-wrap;
-          color: #9da6c7;
+          color: #fff;
         }
       }
     }
