--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1707,7 +1707,8 @@ body {
               padding-left: 10px;
               padding-right: 10px;
               p {
-                color: #9da6c7;
+                color: #fff;
+                font-size: 18px;
               }
             }
             .counter-box {
@@ -1785,7 +1786,7 @@ body {
               padding-left: 200px;
               padding-right: 200px;
               h2 {
-                color: #9da6c7;
+                color: #fff;
                 font-size: 18px;
                 font-family: 'Gotham Book';
               }
@@ -2029,7 +2030,8 @@ body {
               padding-left: 210px;
               padding-right: 210px;
               p {
-                color: #9da6c7;
+                color: #fff;
+                font-size: 18px;
               }
             }
           }
@@ -4993,9 +4995,6 @@ body {
                 h1 {
                   font-size: 36px;
                 }
-                p {
-                  font-size: 18px;
-                }
               }
               .counter-box {
                 flex-direction: row;
@@ -5065,9 +5064,6 @@ body {
                 padding-right: 180px;
                 h1 {
                   font-size: 36px;
-                }
-                h2 {
-                  font-size: 18px;
                 }
               }
             }
@@ -5572,9 +5568,6 @@ body {
               .header-text {
                 padding-left: 180px;
                 padding-right: 180px;
-                p {
-                  font-size: 14px;
-                }
               }
             }
             .row {
@@ -6040,9 +6033,6 @@ body {
                 h1 {
                   font-size: 48px;
                 }
-                p {
-                  font-size: 20px;
-                }
               }
               .counter-box {
                 .box {
@@ -6093,9 +6083,6 @@ body {
                 padding-right: 180px;
                 h1 {
                   font-size: 48px;
-                }
-                h2 {
-                  font-size: 20px;
                 }
               }
             }
